# F1-Dashboard

./: .gitignore  Makefile  README.md  fly.toml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/cache/: file_cache.py
backend/app/models/: circuit.py  grid.py  historical.py  news.py  position.py  race_control.py  schedule.py  session.py  standings.py  timing.py  weather.py
backend/app/replay/: manager.py
backend/app/routers/: circuits.py  grid.py  historical.py  news.py  positions.py  predictions.py  race_control.py  replay.py  schedule.py  standings.py  state.py  timing.py  weather.py
backend/app/services/: livef1_client.py  news_client.py  schedule_service.py  weather_client.py
backend/app/state_machine/: machine.py
backend/app/workers/: live_poller.py
backend/data/: circuits.json  standings.json
backend/docs/: livef1-api.md
backend/tests/: conftest.py
backend/tests/fixtures/: download_spa_2024.py
backend/tests/fixtures/spa_2024/: schema.md
backend/tests/integration/: test_circuits_router.py  test_grid_router.py  test_health.py  test_historical_router.py  test_news_router.py  test_positions_router.py  test_race_control_router.py  test_schedule_router.py  test_state_router.py  test_timing_router.py  test_weather_router.py
backend/tests/replay/: test_replay_manager.py  test_spa_2024_replay.py
backend/tests/unit/: test_cache.py  test_imports.py  test_live_poller.py  test_models.py  test_parsers.py  test_state_machine.py
docs/: f1-dashboard-design-spec.md
(+5 files in other folders)
